[package]
name = "nou"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2"

embedded-hal = "0.2"

stm32u5 = { version = "0.16.0", features = ["stm32u545"] }

ssd1306 = "0.8"
embedded-graphics = "0.8"
display-interface-i2c = "0.4"

[profile.dev]
codegen-units = 1
debug = true
lto = true
panic = "abort"

[profile.release]
codegen-units = 1
debug = true
lto = true
panic = "abort"